--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-886.0KB/s(Youtube:不良林), server: cd.rutracker-cn.com, port: 443, type: trojan, password: ukMzuFSmIXDvgW0h, sni: cd.rutracker-cn.com, skip-cert-verify: true}
+  - {name: 以色列-2.35MB/s(Youtube:不良林), server: 83.229.73.60, port: 50003, type: ss, cipher: aes-256-cfb, password: !<str> 8460400130}
+  - {name: 🇨🇳 中国-3.79MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.71MB/s(Youtube:不良林), server: usa-dallas.lvuft.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: usa-dallas.lvuft.com}}
-  - {name: 🇺🇸 美国-5.47MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-6.12MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.92MB/s(Youtube:不良林), server: 45.35.84.162, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 45.35.84.162}}
-  - {name: 🇯🇵 日本-5.22MB/s(Youtube:不良林), server: 150.230.60.8, port: 26195, type: vmess, uuid: 8c44be2e-2e16-4cf4-db1e-a1c8c61b7fd4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.08MB/s(Youtube:不良林), server: 167.172.135.97, port: 25453, type: ss, cipher: aes-256-cfb, password: a40ff797db5c4b948cfe5a5234a0e74c}
-  - {name: 🇨🇦 加拿大-3.60MB/s(Youtube:不良林), server: 147.182.151.24, port: 20110, type: ss, cipher: aes-256-cfb, password: f5e0ecc4e6b84a668ee9ed98e0a30ca9}
-  - {name: 🇭🇰 香港-1.56MB/s(Youtube:不良林), server: 74.119.193.69, port: 16616, type: vmess, uuid: 59a8f92b-62c0-431e-9b28-a91c43056a6e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 74.119.193.69}}
+  - {name: 🇨🇦 加拿大-4.16MB/s(Youtube:不良林), server: 147.182.151.24, port: 20110, type: ss, cipher: aes-256-cfb, password: f5e0ecc4e6b84a668ee9ed98e0a30ca9}
+  - {name: 🇭🇰 香港-2.15MB/s(Youtube:不良林), server: 74.119.193.69, port: 16616, type: vmess, uuid: 59a8f92b-62c0-431e-9b28-a91c43056a6e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 74.119.193.69}}
   - {name: 🇭🇰 香港-6.46MB/s(Youtube:不良林), server: hk.arthas.cf, port: 10079, type: vmess, uuid: 67248802-397d-4448-a967-b7c7045df077, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
   - {name: 🇭🇰 香港-6.50MB/s(Youtube:不良林), server: hk.arthas.cf, port: 10078, type: trojan, password: Chaijing130, sni: hk.arthas.cf, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-886.0KB/s(Youtube:不良林)
+      - 以色列-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.16MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.15MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.46MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.50MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-886.0KB/s(Youtube:不良林)
+      - 以色列-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.16MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.15MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.46MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.50MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,21 +52,21 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-886.0KB/s(Youtube:不良林)
+      - 以色列-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.16MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.15MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.46MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.50MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.15MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.46MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.50MB/s(Youtube:不良林)
       - 🔰 节点选择
@@ -75,14 +75,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-886.0KB/s(Youtube:不良林)
+      - 以色列-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.16MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.15MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.46MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.50MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -90,14 +90,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-886.0KB/s(Youtube:不良林)
+      - 以色列-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.16MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.15MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.46MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.50MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -106,14 +106,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-886.0KB/s(Youtube:不良林)
+      - 以色列-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.16MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.15MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.46MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.50MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -131,14 +131,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-886.0KB/s(Youtube:不良林)
+      - 以色列-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.16MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.15MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.46MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.50MB/s(Youtube:不良林)
 rules:
