--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.79MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-409.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇺🇸 美国-5.47MB/s(Youtube:不良林), server: usa005.369boy.com, port: 15001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa005.369boy.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.10MB/s(Youtube:不良林), server: 167.172.135.97, port: 25453, type: ss, cipher: aes-256-cfb, password: a40ff797db5c4b948cfe5a5234a0e74c}
-  - {name: 🇺🇸 美国-5.27MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.77MB/s(Youtube:不良林), server: usa004.369boy.com, port: 14001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa004.369boy.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.45MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.53MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.42MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
-  - {name: 🇺🇸 美国-507.4KB/s(Youtube:不良林), server: ahdaeph8.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: ahdaeph8.com}}
-  - {name: 🇬🇧 英国-1.94MB/s(Youtube:不良林), server: 152.89.210.105, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇭🇰 香港-1.52MB/s(Youtube:不良林), server: 148.66.56.99, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.46MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.35MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.61MB/s(Youtube:不良林), server: 152.89.210.105, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇬🇧 英国-3.11MB/s(Youtube:不良林), server: 152.89.210.105, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇭🇰 香港-893.7KB/s(Youtube:不良林), server: 148.66.56.99, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇭🇰 香港-1.31MB/s(Youtube:不良林), server: 148.66.56.99, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-507.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-893.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-507.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-893.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-507.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-893.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.52MB/s(Youtube:不良林)
+      - 🇭🇰 香港-893.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-507.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-893.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-507.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-893.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-507.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-893.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-507.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-893.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
