--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,49 +5,49 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-6.03MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-4.43MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-9.90MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-10.95MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇭🇰 香港-6.16MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-307.3KB/s(Youtube:不良林), server: 45.78.6.3, port: 29577, type: ss, cipher: aes-256-gcm, password: x2XdRxsjCpjTfWB9}
   - {name: 🇺🇸 美国-1.97MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.39MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-6.03MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.90MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.95MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-6.03MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.90MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.95MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-6.03MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.90MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.95MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-6.03MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.90MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.95MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.16MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -55,32 +55,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-6.03MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.90MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.95MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-6.03MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.90MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.95MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-6.03MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.90MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.95MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -96,11 +96,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-6.03MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.90MB/s(Youtube:不良林)
+      - 🇭🇰 香港-10.95MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
